[project]
name = ""
version = ""
description = ""
authors = [
    {name = "r2r2", email = "r2r2@yahoo.com"},
]
dependencies = [
    "fastapi>=0.81.0",
    "uvicorn>=0.18.3",
    "pytest>=7.1.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
